# cloud_warehouse

./: .gitignore  Instructions_from_Udacity.md  README.md  checks.ipynb  create_tables.py  dwh.cfg  etl.py  infra.py  infra_config.json  pyproject.toml  requirements.txt  sparkify_Instructions_from_Udacity.md  sparkify_exploration.ipynb  sql_queries.py  test.ipynb
data/sakila/: postgres-sakila-delete-data.sql  postgres-sakila-schema.sql
notebooks/: project.ipynb
notebooks/Lessons/: L1 E1 - Step 1 & 2.ipynb  L2 etc..ipynb  nb.ipynb
