[tool.poetry]
name = "cloud-warehouse"
version = "0.1.0"
description = "Part II of Udacity's Data Engineering With AWS Nano-Degree Program"
authors = ["Caspar Heidbrink <37964284+DecisioNaut@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cloud_warehouse"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.21.2"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
ipython-sql = "^0.5.0"
pandas = "^1.5.3"
sqlalchemy = "^2.0.5.post1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
